fixes padding and margins in form on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -393,7 +393,7 @@ footer div:nth-child(2) {
   }
 
   img {
-    height: 30em;
+    height: 25em;
   }
 
   footer {
@@ -539,7 +539,7 @@ form {
 
 @media only screen and (max-width: 899px) {
   form {
-    margin-top: 3em;
+    margin-top: 1em;
   }
 
   .form-inner-wrapper {
@@ -556,6 +556,10 @@ form {
 
   #apply p {
     padding: 1em;
+  }
+
+  #privacy-link {
+    margin-top: 0;
   }
 }
 
